--- a/O-02-LR-L-152.html
+++ b/O-02-LR-L-152.html
@@ -36,28 +36,28 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="img/galeria/O-02-LR-L-152/L152-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-152</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-02-LR-L-152/L152-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-152</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-02-LR-L-152/L152-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-152</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-02-LR-L-152/L152-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-152</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
