--- a/O-04-LR-L-170.html
+++ b/O-04-LR-L-170.html
@@ -26,28 +26,28 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="img/galeria/O-04-LR-L-170/L170-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA: LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-04-LR-L-170/L170-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-04-LR-L-170/L170-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-04-LR-L-170/L170-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
