--- a/O-06-LP-GR-01.html
+++ b/O-06-LP-GR-01.html
@@ -32,21 +32,21 @@
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-06-LP-GR-01/GR-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS PATRICIOS L-01</h5>
 				  <h6>SAN ISIDRO, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-06-LP-GR-01/GR-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS PATRICIOS L-01</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-06-LP-GR-01/GR-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA LOS PATRICIOS L-01</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
