imagen fluid vz

--- a/O-08-VZ-L-23.html
+++ b/O-08-VZ-L-23.html
@@ -25,28 +25,28 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="img/galeria/O-08-VZ-L-23/VZL23-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA: VALDEVEZ L-23</h5>
 				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-08-VZ-L-23/VZL23-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA VALDEVEZ L-23</h5>
 				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-08-VZ-L-23/VZL23-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA VALDEVEZ L-23</h5>
 				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="img/galeria/O-08-VZ-L-23/VZL23-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h5>OBRA VALDEVEZ L-23</h5>
 				  <h6>EZEIZA, BUENOS AIRES.</h6>
