--- a/contacto.html
+++ b/contacto.html
@@ -14,8 +14,13 @@
 </head>
 
 <body>
-	<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-        <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+    
+	<div class="">  
+        <div class="row">
+            <div class="contenedor col-lg-12 col-md-12 col-sm-12">
+                  <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+          </div>  
+        </div>
     </div>
 	
     <header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
@@ -24,7 +29,7 @@
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">QUIENES SOMOS</a></li>   
+                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
             </div>
            
