--- a/informacion.html
+++ b/informacion.html
@@ -12,16 +12,21 @@
 </head>
 
 <body>
-	<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-		<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
-	</div>
+
+	<div class="">  
+      <div class="row">
+	      <div class="contenedor col-lg-12 col-md-12 col-sm-12">
+		        <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+        </div>  
+      </div>
+</div>
 	
 	<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
         <ul class="row header__ul">
             <div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">QUIENES SOMOS</a></li> 
+                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li> 
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
             </div>
@@ -64,8 +69,8 @@
 	</section>
 
 	<aside>
-		<div class="logoAside d-flex align-items-start"><img src="img/logos/logo-kutz-square.jpg" width="200" height="200"></div><br><br><br>
-		<div class="logoAside d-flex align-items-start"><img src="img/logos/logo-kutz-square.jpg" width="200" height="200">
+		<div class="logoAside d-flex align-items-start"><img class="img-fluid" src="img/logos/logo-kutz-square400x200.jpg"></div><br><br><br>
+		<div class="logoAside d-flex align-items-start"><img class="img-fluid" src="img/logos/logo-kutz-square400x200.jpg">
 	</aside>
 	
 
