--- a/obras.html
+++ b/obras.html
@@ -14,15 +14,20 @@
 </head>
 
 <body>
-	<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-		<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
-	</div>
+	
+	<div class="">  
+		<div class="row">
+			<div class="contenedor col-lg-12 col-md-12 col-sm-12">
+				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+		  </div>  
+		</div>
+  </div>
 
 	<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
         <ul class="row header__ul">
             <div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">QUIENES SOMOS</a></li>
+                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li>
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
@@ -35,42 +40,42 @@
 <div class="row">
 <div class="obras1">	
 	<a href="O-01-LR-L-102.html">		
-		<img src="img/galeria/L102-00.jpg" class="obrasGallery" alt="L-102" width="300" height="300" title="Obra LR/L-102">
+		<img class="img-fluid" src="img/galeria/L102-00.jpg" class="obrasGallery" alt="L-102" width="300" height="300" title="Obra LR/L-102">
 			</a>			
 				<a href="O-02-LR-L-152.html">
-					<img src="img/galeria/L152-00.jpg" class="obrasGallery" alt="L-152" width="300" height="300" title="Obra LR/L-152">
+					<img class="img-fluid" src="img/galeria/L152-00.jpg" class="obrasGallery" alt="L-152" width="300" height="300" title="Obra LR/L-152">
 						</a>				
 							<a href="O-03-SR-L-134.html">
-								<img src="img/galeria/L134-00.jpg" class="obrasGallery" alt="L-134" width="300" height="300" title="Obra SR/L-134">
+								<img class="img-fluid" src="img/galeria/L134-00.jpg" class="obrasGallery" alt="L-134" width="300" height="300" title="Obra SR/L-134">
 							</a> 
 						<a href="O-04-LR-L-170.html">
-					<img src="img/galeria/L170-00.jpg" class="obrasGallery" alt="L-170" width="300" height="300" title="Obra LR/L-170">
+					<img class="img-fluid" src="img/galeria/L170-00.jpg" class="obrasGallery" alt="L-170" width="300" height="300" title="Obra LR/L-170">
 				</a> 
 
 			<a href="O-05-SR-L-219.html">
-		<img src="img/galeria/L-219.jpg" class="obrasGallery" alt="L-219" width="300" height="300" title="Obra SR/L-219">
+		<img class="img-fluid" src="img/galeria/L-219.jpg" class="obrasGallery" alt="L-219" width="300" height="300" title="Obra SR/L-219">
 	</a>
 </div>
 
 <div class="obras1">
 	<a href="O-06-LP-GR-01.html">
-		<img src="img/galeria/RG.jpg" class="obrasGallery" alt="RG" width="300" height="300" title="Obra LP/GR-01">
+		<img class="img-fluid" src="img/galeria/RG.jpg" class="obrasGallery" alt="RG" width="300" height="300" title="Obra LP/GR-01">
 			</a>
 
 				<a href="O-07-VB-G-01.html">
-					<img src="img/galeria/Gauna00.jpg" class="obrasGallery" alt="Gauna" width="300" height="300" title="Obra VB/G-01"> 
+					<img class="img-fluid" src="img/galeria/Gauna00.jpg" class="obrasGallery" alt="Gauna" width="300" height="300" title="Obra VB/G-01"> 
 						</a>
 
 							<a href="O-08-VZ-L-23.html">
-								<img src="img/galeria/VZ-00.jpg" class="obrasGallery" alt="VZ" width="300" height="300" title="Obra VZ/L-23">
+								<img class="img-fluid" src="img/galeria/VZ-00.jpg" class="obrasGallery" alt="VZ" width="300" height="300" title="Obra VZ/L-23">
 							</a> 
 
 						<a href="O-09-SR-L-160.html">
-					<img src="img/galeria/L-160.jpg" class="obrasGallery" alt="L-160" width="300" height="300" title="Obra SR/L-160"> 
+					<img class="img-fluid" src="img/galeria/L-160.jpg" class="obrasGallery" alt="L-160" width="300" height="300" title="Obra SR/L-160"> 
 				</a>
 
 			<a href="O-10-LR-L-147.html">
-		<img src="img/galeria/L-147.jpg" class="obrasGallery" alt="L-147" width="300" height="300" title="Obra LR/L-147"> 
+		<img class="img-fluid" src="img/galeria/L-147.jpg" class="obrasGallery" alt="L-147" width="300" height="300" title="Obra LR/L-147"> 
 	</a>
 </div>
 </div>
