--- a/ubicacion.html
+++ b/ubicacion.html
@@ -11,10 +11,15 @@
 	<meta title="buenos aires">
 </head>
 
-<body id="FondoUbicacion">
-	<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-		<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
-	</div>
+<body>
+
+	<div class="">  
+		<div class="row">
+			<div class="contenedor col-lg-12 col-md-12 col-sm-12">
+				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+		  </div>  
+		</div>
+  </div>
 
 	<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
         <ul class="row header__ul">
@@ -22,7 +27,7 @@
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">QUIENES SOMOS</a></li>   
+                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>             
             </div>
            
