--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -39,24 +39,24 @@
 	</div>
 
 		
-	<p class="nuestroTexto">SOMOS UNA EMPRESA ESPECIALIZADA EN LA EJECUCION DE OBRAS CIVILES PARTICULARES E INDUSTRIALES.
+	<p class="nuestroTexto">Somos una empresa especializada en la ejecucion de obras civiles particulares e industriales.
 	<br><br>
-	<em>ACTUALMENTE NOS ENCONTRAMOS PREPARADOS PARA EJECUTAR OBRAS CIVILES DE TODO TIPO INCLUYENDO OBRAS DE MEDIANA Y DE GRAN MAGNITUD, 
-	PARA LO CUAL CONTAMOS CON LAS HERRAMIENTAS, EQUIPOS Y PERSONAL ADECUADO PARA CADA TIPO DE OBRA.</em><br><br> 
-	NUESTRO OBJETIVO ES BRINDARLE A NUESTROS CLIENTES UN SERVICIO INTEGRAL A SUS NECESIDADES CONSTRUCTIVAS.
+	<em>Actualmente os encontramos preparados para ejecutar obras civiles de todo tipo incluyendo obras de mediana y gran magnitud, 
+	para lo cual contamos con las herramientas, equipos y personal adecuado para cada tipo de obra.</em><br><br> 
+	Nuestro objetivo es brindarle a nuestros clientes un servicio integral a sus necesidades constructivas.
 	<br><br>
-	TRABAJAMOS EN LA MEJORA CONTINUA PARA OFRECER EL MEJOR SERVICIO CON EL MEJOR PRECIO DEL MERCADO, CUMPLIENDO CON LOS PLAZOS DE ENTREGAS
-	Y LAS EXIGENCIAS DE CALIDAD DE CADA CLIENTE.
+	Trabajamos en la mejora continua para ofrecer el mejor servicio del mercado, cumpliendo con los plazos de entregas
+	y las exigencias de calidad de cada cliente.
 	<br><br>
-	<span>TODO NUESTRO TRABAJO SE BASA EN LA ALTA VOLUNTAD DE SERVICIO COMO PILAR. TRABAJAMOS CON EL ESPÍRITU Y LA EFECTIVIZACIÓN DE 
-	UNA MEJORA CONTINUA PERMANENTE. BRINDAMOS SOLUCIONES BASADAS EN NUESTRA PROFESIONALIDAD, RECURSOS, EXPERIENCIA, INNOVACIÓN Y CAPACITACIÓN.<br><br>
-	ESTAMOS COMPROMETIDOS CON LA CALIDAD DE NUESTRO TRABAJO. SOMOS FORMALES Y CUMPLIMOS CON NUESTRA PALABRA.</span>
+	<span>Todo nuestro trabajo se basa en la alta voluntad de servicio como pilar. Trabajamos con el espiritu y la efectivización de 
+	una mejora continua permanente. Brindamos soluciones basadas en nuestra profesionalidad, recursos, experiencia, innovación y capacitación.<br><br>
+	Estamos comprometidos con la calidad de nuestro trabajo. Somos formales y cumplimos con nuestra  palabra.</span>
 	<br><br>
-	TRABAJAMOS EN EQUIPO, COMUNICADOS PERMANENTEMENTE. COMPARTIMOS NUESTROS CONOCIMIENTOS Y HABILIDADES DE MANERA TAL DE OBTENER 
-	LOS MEJORES RESULTADOS PARA NUESTROS CLIENTES.
-	CREEMOS EN EL PRAGMATISMO. MEJOR QUE DECIR ES HACER.
+	Trabajamos en equipo, comunicados permanentemente. Compartimos nuestros conocimientos y habilidades de manera tal de obtener 
+	los mejores resultados para nuestros clientes.<br><br><br>	
+	Creemo en el pragmatismo. Mejor que decir es hacer.
 	<br><br>
-	Y SABEMOS CÓMO.</p>
+	Y sabemos como.</p>
 	
 </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
