nuevo intento responsive

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-	<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-		<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
-	</div>	
+	<div class="">  
+		<div class="row">
+			<div class="contenedor col-lg-12 col-md-12 col-sm-12">
+				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+		  </div>  
+		</div>
+  </div>
 
 	<div class="content">	
 		<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
@@ -32,12 +36,12 @@
     </header>
 		
 	
-
-<div class="nosotros">
-	<div class="nosotrosLogo">
-		<img src="img/logos/LogoQS.png">
+	<div class="container">
+	<div class="nosotros">
+		<div class="nosotrosLogo">
+		<img class="img-fluid" src="img/logos/LogoQS.png">
 	</div>
-
+	</div>
 		
 	<p class="nuestroTexto">Somos una empresa especializada en la ejecucion de obras civiles particulares e industriales.
 	<br><br>
