--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -36,7 +36,7 @@
     </header>
 		
 	
-	<div class="container">
+	<div class="">
 	<div class="nosotros">
 		<div class="nosotrosLogo">
 		<img class="img-fluid" src="img/logos/LogoQS.png">
@@ -66,11 +66,6 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
-
-
-
-
-	
 </div>
 
 <br><br><br>
