--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <head>
 	<title>Nosotros - Kutz Construcciones</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
@@ -20,72 +21,67 @@
 		</div>
   </div>
 
-	<div class="content">	
+		
 		<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
 			<ul class="row header__ul">
 				<div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
-            	<div class="col d-flex justify-content-end d-flex align-items-center">
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
-            </div>
-           
-        </ul>
+            		<div class="col d-flex justify-content-end d-flex align-items-center">
+                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
+                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
+                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
+                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
+                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
+					</div>
+				</div>           
+        	</ul>
     </header>
 		
 	
-	<div class="">
-	<div class="nosotros">
-		<div class="nosotrosLogo">
-		<img class="img-fluid" src="img/logos/LogoQS.png">
-	</div>
-	</div>
-		
-	<p class="nuestroTexto">Somos una empresa especializada en la ejecucion de obras civiles particulares e industriales.
-	<br><br>
-	<em>Actualmente os encontramos preparados para ejecutar obras civiles de todo tipo incluyendo obras de mediana y gran magnitud, 
-	para lo cual contamos con las herramientas, equipos y personal adecuado para cada tipo de obra.</em><br><br> 
-	Nuestro objetivo es brindarle a nuestros clientes un servicio integral a sus necesidades constructivas.
-	<br><br>
-	Trabajamos en la mejora continua para ofrecer el mejor servicio del mercado, cumpliendo con los plazos de entregas
-	y las exigencias de calidad de cada cliente.
-	<br><br>
-	<span>Todo nuestro trabajo se basa en la alta voluntad de servicio como pilar. Trabajamos con el espiritu y la efectivización de 
-	una mejora continua permanente. Brindamos soluciones basadas en nuestra profesionalidad, recursos, experiencia, innovación y capacitación.<br><br>
-	Estamos comprometidos con la calidad de nuestro trabajo. Somos formales y cumplimos con nuestra  palabra.</span>
-	<br><br>
-	Trabajamos en equipo, comunicados permanentemente. Compartimos nuestros conocimientos y habilidades de manera tal de obtener 
-	los mejores resultados para nuestros clientes.<br><br><br>	
-	Creemo en el pragmatismo. Mejor que decir es hacer.
-	<br><br>
-	Y sabemos como.</p>
+	<div class="container">
+		<div class="row">
+			<div class="nosotros">
+				<div class="nosotrosLogo">
+					<img class="img-fluid" src="img/logos/LogoQS.png">
+				</div>
 	
-</div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+				<div class="nuestroTexto">
+					<h2>QUIENES SOMOS</h2>	
+					<p>Somos una empresa especializada en la ejecucion de obras civiles particulares e industriales.
+					<br><br>
+					<em>Actualmente nos encontramos preparados para ejecutar obras civiles de todo tipo incluyendo obras de mediana y gran magnitud, 
+					para lo cual contamos con las herramientas, equipos y personal adecuado para cada tipo de obra.</em><br><br> 
+					Nuestro objetivo es brindarle a nuestros clientes un servicio integral a sus necesidades constructivas.
+					<br><br>
+					Trabajamos en la mejora continua para ofrecer el mejor servicio del mercado, cumpliendo con los plazos de entregas
+					y las exigencias de calidad de cada cliente.
+					<br><br>
+					<span>Todo nuestro trabajo se basa en la alta voluntad de servicio como pilar. Trabajamos con el espiritu y la efectivización de 
+					una mejora continua permanente. Brindamos soluciones basadas en nuestra profesionalidad, recursos, experiencia, innovación y capacitación.<br><br>
+					Estamos comprometidos con la calidad de nuestro trabajo. Somos formales y cumplimos con nuestra  palabra.</span></p>
+					<br><br>
+					<h2>CUIDADO DEL MEDIO AMBIENTE</h2>
+					<p>Llevamos adelante nuestras obras protegiendo todos los recursos que interactúan y participan en las distintas fases de los 
+					procesos de construcción, previniendo situaciones que contaminen o dañen el medio ambiente, exigiendo a todos los involucrados 
+					llevar a cabo el desarrollo de las tareas acorde a esta norma y sin olvidar nuestra premisa: "Planificar, hacer, verificar y 
+					actuar para lograr objetivos". En cada proyecto adecuamos nuestras actividades a la magnitud de los impactos ambientales, 
+					previendo la contaminación y protegiendo la naturaleza, dando cumplimiento a los requisitos legales aplicables junto a las 
+					exigencias de nuestros clientes, ya que contamos con los lineamientos de las normativas vigentes. <br><br>
+					Trabajamos en equipo, comunicados permanentemente. Compartimos nuestros conocimientos y habilidades de manera tal de obtener 
+					los mejores resultados para nuestros clientes.<br><br><br>	
+					Creemo en el pragmatismo. Mejor que decir es hacer.
+					<br><br>
+					Y sabemos como.</p> 
+				</div>	
+			</div>
 
+		
 
-</div>
-
-<br><br><br>
-
-
-
-
-
-
-<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">        
-	<ul class="row d-flex justify-content-between">
-		<div class="col d-flex align-items-center">
-			<li><h5>Para mas info seguinos en nuestro <a href="https://www.instagram.com/kutz.construcciones/" target="blank">instagram</a></h5></li>
-				</div>                
-				<div class="col d-flex justify-content-end d-flex align-items-center">                                        
-			<li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
 		</div>
-	</ul>    
-</footer>				
+	</div>
 
-</div>
+
+
+
+
 </body>
 </html>
