--- a/obras.html
+++ b/obras.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <head>
 	<title>Galeria - Kutz Construcciones</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
@@ -35,9 +36,9 @@
         </ul>
     </header>
 
-
+<div class="container">
 <div class="row">
-<div class="obras1">	
+	<div class="obras1">	
 	<a href="O-01-LR-L-102.html">		
 		<img class="img-fluid" src="img/galeria/L102-00.jpg" class="obrasGallery" alt="L-102" width="300" height="300" title="Obra LR/L-102">
 			</a>			
@@ -78,20 +79,17 @@
 	</a>
 </div>
 </div>
+</div>
 
 
 
-
-<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">        
-	<ul class="row d-flex justify-content-between">
-		<div class="col d-flex align-items-center">
-			<li><h5>Para mas info seguinos en nuestro <a href="https://www.instagram.com/kutz.construcciones/" target="blank">instagram</a></h5></li>
-				</div>                
-				<div class="col d-flex justify-content-end d-flex align-items-center">                                        
-			<li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		</div>
-	</ul>    
-</footer>		
+<div class="container">
+	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
+		   <div class="d-flex align-items-end">                                        
+			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
+		   </div>        
+	</footer>
+</div>
 
 </body>
 </html>
