--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <head>
     <title>Contacto - Kutz Construcciones</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="img/logo.ico">
@@ -37,7 +38,7 @@
     </header>
 	
 	
-	<div class="">
+	<div class="container">
         <div class="row">
     <section class="grid">
 
@@ -45,10 +46,7 @@
              <h2 class="tituloFormulario animate__fadeIn">COMPLETA EL FORMULARIO DE CONTACTO</h2>
         </div>
 
-        <div class="logoForm animate__bounceInUp">
-            <img src="img/logos/logo-kutz-square.jpg" alt="">
-        </div>
-
+        
         <div class="form">
             <form>
                 <fieldset class="field">
@@ -95,22 +93,24 @@
 
 
     </section>
+
+
+<div class="container">
+    <footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
+           <div class="d-flex align-items-end">                                        
+             <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
+           </div>        
+    </footer>
+</div>	
+
 </div>
+
 </div>       
     
 
 
 
-    <footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">        
-        <ul class="row d-flex justify-content-between">
-            <div class="col d-flex align-items-center">
-                <li><h5>Para mas info seguinos en nuestro <a href="https://www.instagram.com/kutz.construcciones/" target="blank">instagram</a></h5></li>
-                    </div>                
-                    <div class="col d-flex justify-content-end d-flex align-items-center">                                        
-                <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-            </div>
-        </ul>    
-    </footer>		
+
 
 </body>
 </html>
