--- a/contacto.html
+++ b/contacto.html
@@ -84,8 +84,10 @@
 
         <div class="viaAlternativa">
             <h2 class="alternative animate__lightSpeedInRight">TAMBIEN PODES COMUNICARTE CON NOSOTROS POR LAS SIGUIENTES VIAS</h2>
-            <p> <strong>E - MAIL:</strong> kutz.construcciones@gmail.com</p>
-            <p> <strong>TELEFONO:</strong> + 54 (911) 3491 - 2077</p>
+            <h2>E - MAIL:</h2>
+            <p> <strong></strong>kutz.construcciones@gmail.com</strong></p>
+            <h2>TELEFONO:</h2>
+            <p> <strong></strong>+ 54 (911) 3491 - 2077</strong></p>
 
         </div>
 
