--- a/O-05-SR-L-219.html
+++ b/O-05-SR-L-219.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <head>
 	<title>Kutz Construcciones</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
@@ -14,7 +15,9 @@
 			<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
 		</div>
 		
-
+	<div class="container">
+		<div class="row">
+			
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -64,8 +67,8 @@
 		  </div>		
 	</div>
 	
-
-
+</div>
+</div>
 
 
 	<header class="container-fluid">
@@ -82,16 +85,13 @@
 
 
 
-<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">        
-	<ul class="row d-flex justify-content-between">
-		<div class="col d-flex align-items-center">
-			<li><h5>Para mas info seguinos en nuestro <a href="https://www.instagram.com/kutz.construcciones/" target="blank">instagram</a></h5></li>
-				</div>                
-				<div class="col d-flex justify-content-end d-flex align-items-center">                                        
-			<li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		</div>
-	</ul>    
-</footer>	
+<div class="container">
+	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
+		   <div class="d-flex align-items-end">                                        
+			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
+		   </div>        
+	</footer>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
