--- a/ubicacion.html
+++ b/ubicacion.html
@@ -27,7 +27,6 @@
             <div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="informacion.html">INFO</a></li> 
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li>   
                 <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>             
             </div>
@@ -36,24 +35,21 @@
     </header>
 
 	
-	
-		<div class="map d-flex justify-content-center">
+	<div class="container">
+		<div class="row">
+			<div class="map d-flex justify-content-center">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124944.08231828726!2d-58.49469881568035!3d-34.6223078365648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3d05457fbb%3A0xe160f4fce7f7c017!2sBuenos%20Aires!5e0!3m2!1ses!2sar!4v1593901869475!5m2!1ses!2sar" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 		</div>
-	<div>
-	
-</div>
+	</div>
+	</div>
 
-<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">        
-	<ul class="row d-flex justify-content-between">
-		<div class="col d-flex align-items-center">
-			<li><h5>Para mas info seguinos en nuestro <a href="https://www.instagram.com/kutz.construcciones/" target="blank">instagram</a></h5></li>
-				</div>                
-				<div class="col d-flex justify-content-end d-flex align-items-center">                                        
-			<li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		</div>
-	</ul>    
-</footer>
+<div class="container">
+	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
+		   <div class="d-flex align-items-end">                                        
+			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
+		   </div>        
+	</footer>
+</div>
 
 
 </body>
