--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,8 @@
 	
 	<div class="container">
         <div class="row">
-    <section class="grid">
+
+    <section class="grid col-lg-4 col-md-8 col-sm-12">
 
         <div class="tituloForm">
              <h2 class="tituloFormulario animate__fadeIn">COMPLETA EL FORMULARIO DE CONTACTO</h2>
