--- a/obras.html
+++ b/obras.html
@@ -18,7 +18,7 @@
 	<div class="">  
 		<div class="row">
 			<div class="contenedor col-lg-12 col-md-12 col-sm-12">
-				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
 		  </div>  
 		</div>
   </div>
