--- a/O-02-LR-L-152.html
+++ b/O-02-LR-L-152.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div>
-			<h1 class="TituloHome">KUTZ CONSTRUCCIONES       -       VIVIENDAS DE ALTA GAMA</h1>
+			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
 		</div>
 		<br><br>
 
