--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     
 	<div class="">  
         <div class="row">
-            <div class="contenedor col-lg-12 col-md-12 col-sm-12">
+            <div class="contenedor col-lg-12 col-md-8 col-sm-4">
                   <h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
           </div>  
         </div>
@@ -37,10 +37,10 @@
     </header>
 	
 	
-	<div class="container">
+	<div class="container col-lg-4 col-md-8 col-sm-12">
         <div class="row">
 
-    <section class="grid col-lg-4 col-md-8 col-sm-12">
+    <section class="grid">
 
         <div class="tituloForm">
              <h2 class="tituloFormulario animate__fadeIn">COMPLETA EL FORMULARIO DE CONTACTO</h2>
